force-app/main/default/objects/VOC__c/VOC__c.object-meta.xml
<CustomObject>
    <label>VOC</label>
    <nameField>
        <label>VOC Number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>