force-app/main/default/objects/VOC__c/fields/AffiliatedDepartment__c.field-meta.xml
<CustomField>
    <fullName>AffiliatedDepartment__c</fullName>
    <label>AffiliatedDepartment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>협력사</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>영업/FS</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>상품</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>SCM</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>센트럴키친</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>