force-app/main/default/objects/VOC__c/fields/CallNumber__c.field-meta.xml
<CustomField>
    <fullName>CallNumber__c</fullName>
    <description>발신번호</description>
    <label>Call Number</label>
    <type>Phone</type>
</CustomField>