force-app/main/default/objects/VOC__c/fields/CallTypeCode__c.field-meta.xml
<CustomField>
    <fullName>CallTypeCode__c</fullName>
    <description>콜구분</description>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>In</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>