force-app/main/default/objects/VOC__c/fields/CustomerAge__c.field-meta.xml
<CustomField>
    <fullName>CustomerAge__c</fullName>
    <label>CustomerAge</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>