force-app/main/default/objects/VOC__c/fields/CustomerGenderCode__c.field-meta.xml
<CustomField>
    <fullName>CustomerGenderCode__c</fullName>
    <label>CustomerGender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>여자</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>남자</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>