force-app/main/default/objects/VOC__c/fields/CustRequesterName__c.field-meta.xml
<CustomField>
    <fullName>CustRequesterName__c</fullName>
    <label>CustRequesterName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>