force-app/main/default/objects/VOC__c/fields/DeliveryQuantity__c.field-meta.xml
<CustomField>
    <fullName>DeliveryQuantity__c</fullName>
    <label>DeliveryQuantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>