force-app/main/default/objects/VOC__c/fields/DeliveryQuantityUnitCode__c.field-meta.xml
<CustomField>
    <fullName>DeliveryQuantityUnitCode__c</fullName>
    <label>DeliveryQuantityUnit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOX</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>PAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>