force-app/main/default/objects/VOC__c/fields/ExpireDate__c.field-meta.xml
<CustomField>
    <fullName>ExpireDate__c</fullName>
    <label>ExpireDate</label>
    <type>Date</type>
</CustomField>