force-app/main/default/objects/VOC__c/fields/HasItem__c.field-meta.xml
<CustomField>
    <fullName>HasItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasItem</label>
    <type>Checkbox</type>
</CustomField>