force-app/main/default/objects/VOC__c/fields/img_file_url2__c.field-meta.xml
<CustomField>
    <fullName>img_file_url2__c</fullName>
    <label>img_file_url2</label>
    <type>Url</type>
</CustomField>