force-app/main/default/objects/VOC__c/fields/IsIssue__c.field-meta.xml
<CustomField>
    <fullName>IsIssue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>이슈</description>
    <label>Is Issue?</label>
    <type>Checkbox</type>
</CustomField>