force-app/main/default/objects/VOC__c/fields/IsNormal__c.field-meta.xml
<CustomField>
    <fullName>IsNormal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNormal</label>
    <type>Checkbox</type>
</CustomField>