force-app/main/default/objects/VOC__c/fields/IssueType__c.field-meta.xml
<CustomField>
    <fullName>IssueType__c</fullName>
    <description>이슈유형</description>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>언론유포</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>소비자원신고</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>과보상요구</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>대관신고</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>기타</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>