force-app/main/default/objects/VOC__c/fields/MA__c.field-meta.xml
<CustomField>
    <fullName>MA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VOCMA</relationshipName>
    <type>Lookup</type>
</CustomField>