force-app/main/default/objects/VOC__c/fields/MACode__c.field-meta.xml
<CustomField>
    <fullName>MACode__c</fullName>
    <label>MACode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>