force-app/main/default/objects/VOC__c/fields/MAMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MAMobilePhone__c</fullName>
    <description>MA휴대전화</description>
    <label>MA Mobile Phone</label>
    <type>Phone</type>
</CustomField>