force-app/main/default/objects/VOC__c/fields/ManagementAddress__c.field-meta.xml
<CustomField>
    <fullName>ManagementAddress__c</fullName>
    <description>관리처주소</description>
    <label>Management Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>