force-app/main/default/objects/VOC__c/fields/ManagementWebsiteCode__c.field-meta.xml
<CustomField>
    <fullName>ManagementWebsiteCode__c</fullName>
    <label>Management Website Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>