force-app/main/default/objects/VOC__c/fields/ManagerCategory__c.field-meta.xml
<CustomField>
    <fullName>ManagerCategory__c</fullName>
    <label>Manager Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>