force-app/main/default/objects/VOC__c/fields/ManagerCategoryCode__c.field-meta.xml
<CustomField>
    <fullName>ManagerCategoryCode__c</fullName>
    <label>ManagerCategory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>없음</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>MA</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>SMA</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>점포관리자</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>