force-app/main/default/objects/VOC__c/fields/MAName__c.field-meta.xml
<CustomField>
    <fullName>MAName__c</fullName>
    <label>MAName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>