force-app/main/default/objects/VOC__c/fields/ManufactureDate__c.field-meta.xml
<CustomField>
    <fullName>ManufactureDate__c</fullName>
    <label>ManufactureDate</label>
    <type>Date</type>
</CustomField>