force-app/main/default/objects/VOC__c/fields/ManufactureName__c.field-meta.xml
<CustomField>
    <fullName>ManufactureName__c</fullName>
    <label>ManufactureName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>