force-app/main/default/objects/VOC__c/fields/ManufactureNumberLOT__c.field-meta.xml
<CustomField>
    <fullName>ManufactureNumberLOT__c</fullName>
    <label>ManufactureNumberLOT</label>
    <length>16</length>
    <type>Text</type>
</CustomField>