force-app/main/default/objects/VOC__c/fields/MAStoreManager__c.field-meta.xml
<CustomField>
    <fullName>MAStoreManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MAStoreManager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VOCMAStoreManager</relationshipName>
    <type>Lookup</type>
</CustomField>