force-app/main/default/objects/VOC__c/fields/MAStoreManagerCode__c.field-meta.xml
<CustomField>
    <fullName>MAStoreManagerCode__c</fullName>
    <label>MAStoreManagerCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>