force-app/main/default/objects/VOC__c/fields/MAStoreManagerHP__c.field-meta.xml
<CustomField>
    <fullName>MAStoreManagerHP__c</fullName>
    <label>MAStoreManagerHP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>