force-app/main/default/objects/VOC__c/fields/MAStoreManagerName__c.field-meta.xml
<CustomField>
    <fullName>MAStoreManagerName__c</fullName>
    <description>MA/점포관리자</description>
    <label>MA/Store Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>