force-app/main/default/objects/VOC__c/fields/MDCode__c.field-meta.xml
<CustomField>
    <fullName>MDCode__c</fullName>
    <label>MDCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>