force-app/main/default/objects/VOC__c/fields/MDName__c.field-meta.xml
<CustomField>
    <fullName>MDName__c</fullName>
    <label>MDName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>