force-app/main/default/objects/VOC__c/fields/MDPhone__c.field-meta.xml
<CustomField>
    <fullName>MDPhone__c</fullName>
    <label>MDPhone</label>
    <type>Phone</type>
</CustomField>