force-app/main/default/objects/VOC__c/fields/MenuInformation__c.field-meta.xml
<CustomField>
    <fullName>MenuInformation__c</fullName>
    <label>MenuInformation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>