force-app/main/default/objects/VOC__c/fields/OccurrenceDate__c.field-meta.xml
<CustomField>
    <fullName>OccurrenceDate__c</fullName>
    <label>OccurrenceDate</label>
    <type>Date</type>
</CustomField>