force-app/main/default/objects/VOC__c/fields/ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>ParentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VOC (ParentAccount)</relationshipLabel>
    <relationshipName>VOC</relationshipName>
    <type>Lookup</type>
</CustomField>