force-app/main/default/objects/VOC__c/fields/PartnerAddress__c.field-meta.xml
<CustomField>
    <fullName>PartnerAddress__c</fullName>
    <label>PartnerAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>