force-app/main/default/objects/VOC__c/fields/PartnerManagerName__c.field-meta.xml
<CustomField>
    <fullName>PartnerManagerName__c</fullName>
    <label>PartnerManagerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>