force-app/main/default/objects/VOC__c/fields/PartnerName__c.field-meta.xml
<CustomField>
    <fullName>PartnerName__c</fullName>
    <label>PartnerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>