force-app/main/default/objects/VOC__c/fields/PartnerPhone__c.field-meta.xml
<CustomField>
    <fullName>PartnerPhone__c</fullName>
    <label>PartnerPhone</label>
    <type>Phone</type>
</CustomField>