force-app/main/default/objects/VOC__c/fields/PriorityCode__c.field-meta.xml
<CustomField>
    <fullName>PriorityCode__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>일반</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>강성</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>