force-app/main/default/objects/VOC__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>접수</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>처리중</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>출고완료</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>보류중</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>출고정정완료</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>처리완료</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>