force-app/main/default/objects/VOC__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>VOC</relationshipLabel>
    <relationshipName>VOC</relationshipName>
    <type>Lookup</type>
</CustomField>