force-app/main/default/objects/VOC__c/fields/RegDate__c.field-meta.xml
<CustomField>
    <fullName>RegDate__c</fullName>
    <label>RegDate</label>
    <type>DateTime</type>
</CustomField>