force-app/main/default/objects/VOC__c/fields/Register__c.field-meta.xml
<CustomField>
    <fullName>Register__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Register</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VOCRegister</relationshipName>
    <type>Lookup</type>
</CustomField>