force-app/main/default/objects/VOC__c/fields/RegisterCode__c.field-meta.xml
<CustomField>
    <fullName>RegisterCode__c</fullName>
    <label>RegisterCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>