force-app/main/default/objects/VOC__c/fields/RegisterName__c.field-meta.xml
<CustomField>
    <fullName>RegisterName__c</fullName>
    <label>RegisterName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>