force-app/main/default/objects/VOC__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <description>요청자</description>
    <label>Requester</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>고객</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>MA</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>MD</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>협력사</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>배송기사</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>물류담당자</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>일반</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>기타FW사원</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>