force-app/main/default/objects/VOC__c/fields/RequesterCode__c.field-meta.xml
<CustomField>
    <fullName>RequesterCode__c</fullName>
    <label>RequesterCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>