force-app/main/default/objects/VOC__c/fields/RequesterName__c.field-meta.xml
<CustomField>
    <fullName>RequesterName__c</fullName>
    <description>요청자명</description>
    <label>Requester Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>