force-app/main/default/objects/VOC__c/fields/RequestforJudgment__c.field-meta.xml
<CustomField>
    <fullName>RequestforJudgment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RequestforJudgment</label>
    <type>Checkbox</type>
</CustomField>