force-app/main/default/objects/VOC__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <label>Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>21</fullName>
                <label>반품</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>당일교환</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>익일교환</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>개선요청</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>요구사항없음</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>보상</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>현장방문</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>직송출고정정</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>출고정정</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>현지구매</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>