force-app/main/default/objects/VOC__c/fields/ResponsibleDepartment__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleDepartment__c</fullName>
    <label>ResponsibleDepartment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>협력사</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>고객사</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>SCM</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>영업/FS</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>상품</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>고객센터</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>IT운영팀</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>마케팅팀</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>고객가치혁신팀</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>센트럴키친</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>