force-app/main/default/objects/VOC__c/fields/SalesAddress__c.field-meta.xml
<CustomField>
    <fullName>SalesAddress__c</fullName>
    <description>판매처주소</description>
    <label>Sales Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>