force-app/main/default/objects/VOC__c/fields/SelfProcessingCode__c.field-meta.xml
<CustomField>
    <fullName>SelfProcessingCode__c</fullName>
    <label>SelfProcessing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>유</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>무</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>