force-app/main/default/objects/VOC__c/fields/slst_master_id__c.field-meta.xml
<CustomField>
    <fullName>slst_master_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>slst_master_id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VOC (본점)</relationshipLabel>
    <relationshipName>VOC1</relationshipName>
    <type>Lookup</type>
</CustomField>