force-app/main/default/objects/VOC__c/fields/SMA__c.field-meta.xml
<CustomField>
    <fullName>SMA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VOCSMA</relationshipName>
    <type>Lookup</type>
</CustomField>