force-app/main/default/objects/VOC__c/fields/SMACode__c.field-meta.xml
<CustomField>
    <fullName>SMACode__c</fullName>
    <label>SMACode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>