force-app/main/default/objects/VOC__c/fields/SMAName__c.field-meta.xml
<CustomField>
    <fullName>SMAName__c</fullName>
    <label>SMAName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>