force-app/main/default/objects/VOC__c/fields/SMAPhone__c.field-meta.xml
<CustomField>
    <fullName>SMAPhone__c</fullName>
    <label>SMAPhone</label>
    <type>Phone</type>
</CustomField>