force-app/main/default/objects/VOC__c/fields/TeamBranch__c.field-meta.xml
<CustomField>
    <fullName>TeamBranch__c</fullName>
    <description>팀/지점</description>
    <label>Team/Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>