force-app/main/default/objects/VOC__c/fields/TeamBranchCode__c.field-meta.xml
<CustomField>
    <fullName>TeamBranchCode__c</fullName>
    <label>TeamBranchCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>