force-app/main/default/objects/VOC__c/fields/Updater__c.field-meta.xml
<CustomField>
    <fullName>Updater__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Updater</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VOCUpdater</relationshipName>
    <type>Lookup</type>
</CustomField>