force-app/main/default/objects/VOC__c/fields/UpdaterCode__c.field-meta.xml
<CustomField>
    <fullName>UpdaterCode__c</fullName>
    <label>UpdaterCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>