force-app/main/default/objects/VOC__c/fields/UpdaterName__c.field-meta.xml
<CustomField>
    <fullName>UpdaterName__c</fullName>
    <label>UpdaterName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>