force-app/main/default/objects/VOC__c/fields/UpdDate__c.field-meta.xml
<CustomField>
    <fullName>UpdDate__c</fullName>
    <label>UpdDate</label>
    <type>DateTime</type>
</CustomField>