force-app/main/default/objects/VOC__c/fields/VendorStore__c.field-meta.xml
<CustomField>
    <fullName>VendorStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VendorStore</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VOC</relationshipLabel>
    <relationshipName>VOCVendorStore</relationshipName>
    <type>Lookup</type>
</CustomField>