force-app/main/default/objects/VOC__c/fields/VendorStoreCode__c.field-meta.xml
<CustomField>
    <fullName>VendorStoreCode__c</fullName>
    <label>VendorStoreCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>