force-app/main/default/objects/VOC__c/fields/VendorStoreName__c.field-meta.xml
<CustomField>
    <fullName>VendorStoreName__c</fullName>
    <description>판매처/ 점포</description>
    <label>Vendor/ Store Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>