force-app/main/default/objects/VOC__c/fields/VOCOriginCode__c.field-meta.xml
<CustomField>
    <fullName>VOCOriginCode__c</fullName>
    <description>접수경로</description>
    <label>VOC Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>자사고객</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>080</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>6114</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>홈페이지</label>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>