force-app/main/default/objects/VOC__c/fields/VOCQuantity__c.field-meta.xml
<CustomField>
    <fullName>VOCQuantity__c</fullName>
    <label>VOCQuantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>